CTA mobile overflow fix

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -610,10 +610,6 @@ button:focus{outline: none;}
 }
 
 @media only screen and (max-width: 70em){
-    
-    .cta-wrapper{
-        column-gap: 0;
-    }
 
     .cta-image{
         transform: scale(1.1) translateX(-2em);
@@ -625,21 +621,25 @@ button:focus{outline: none;}
 }
 
 @media only screen and (max-width: 50em){
-    .cta-wrapper{
+    .cta{
+        grid-template-rows: 31em auto;
         margin: 0 auto 10vh;
+        overflow-x: hidden;
+
     }
 
     .cta-image{
-        transform: scale(1.45) translateX(-1em);
+        transform: scale(1.2) translateX(-1em);
         transform-origin: top;
         grid-column: 1/-1;
         width: auto;
         height: 28em;
-        margin: -8rem auto 0em;
+        margin: 1rem auto 0em;
+        
     }
 
     .cta-copy{
-        padding: 2rem 2rem 3rem;
+        padding: 3rem 2rem 3rem;
         grid-column: 1/-1;
         grid-row: 2;
         margin: 0;
